<?xml version="1.0"?>
<package format="2">
  <name>topic_publishtests</name>
  <version>0.0.0</version>
  <description>The topic_publishtests package</description>

  <maintainer email="81685394+HHorimoto@users.noreply.github.com">HHorimoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
